<resources>
    <string name="app_name">Calculator</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="div">/</string>
    <string name="mod">mod</string>
    <string name="igual">=</string>
    <string name="punto">.</string>
    <string name="por">*</string>
    <string name="binario">bin</string>
    <string name="decimal">dec</string>
    <string name="del">del</string>
    <string name="clear">C</string>
    <string name="another_number">You must enter another number!!!</string>
    <string name="begin">You have reached the beginning!!!</string>
    <string name="onedot">Can only be used once dot!!!</string>
    <string name="nodivide">You can not divide by zero!!!</string>
    <string name="general_error">An error has occurred!!!</string>
</resources>
