<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="guillermoab.posgrado.unam.mx.tarea1.MainActivity">
    <EditText
        android:id="@+id/activitymain_txtdisplay"
        android:textAlignment="textEnd"
        android:maxLength="12"
        android:inputType="numberDecimal"
        android:enabled="false"
        android:textSize="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_below="@+id/activitymain_txtdisplay"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/activitymain_btnmod"
                android:layout_weight="1"
                android:text="@string/mod"
                android:textSize="@dimen/btnfunction_textSize"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnfunction_height" />
            <Button
                android:id="@+id/activitymain_btnbin"
                android:layout_weight="1"
                android:text="@string/binario"
                android:textSize="@dimen/btnfunction_textSize"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnfunction_height" />
            <Button
                android:id="@+id/activitymain_btnC"
                android:layout_weight="1"
                android:textSize="@dimen/btnfunction_textSize"
                android:text="@string/clear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnfunction_height" />
            <Button
                android:id="@+id/activitymain_btndel"
                android:layout_weight="1"
                android:text="@string/del"
                android:textSize="@dimen/btnfunction_textSize"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnfunction_height" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/activitymain_btn7"
                android:layout_weight="1"
                android:text="@string/siete"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/activitymain_btn8"
                android:layout_weight="1"
                android:text="@string/ocho"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/activitymain_btn9"
                android:layout_weight="1"
                android:text="@string/nueve"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/activitymain_btndiv"
                android:layout_weight="1"
                android:text="@string/div"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/activitymain_btn4"
                android:layout_weight="1"
                android:text="@string/cuatro"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/activitymain_btn5"
                android:layout_weight="1"
                android:text="@string/cinco"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/activitymain_btn6"
                android:layout_weight="1"
                android:text="@string/seis"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/activitymain_btnpor"
                android:layout_weight="1"
                android:text="@string/por"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/activitymain_btn1"
                android:layout_weight="1"
                android:text="@string/uno"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/activitymain_btn2"
                android:layout_weight="1"
                android:text="@string/dos"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/activitymain_btn3"
                android:layout_weight="1"
                android:text="@string/tres"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/activitymain_btnmenos"
                android:layout_weight="1"
                android:text="@string/menos"
                android:textSize="@dimen/btngeneric_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/activitymain_btndot"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/punto"
            android:textSize="@dimen/btngeneric_textSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/activitymain_btn0"
            android:layout_weight="1"
            android:text="@string/cero"
            android:textSize="@dimen/btngeneric_textSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/activitymain_btnigual"
            android:layout_weight="1"
            android:text="@string/igual"
            android:textSize="@dimen/btngeneric_textSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/activitymain_btnmas"
            android:layout_weight="1"
            android:text="@string/mas"
            android:textSize="@dimen/btngeneric_textSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
